--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  - oraclejdk7
+  - oraclejdk8
 
 branches:
   only:
@@ -10,3 +10,6 @@ branches:
 notifications:
   email:
   - dalifreire@gmail.com
+  
+script: 
+  - mvn clean install
