--- a/knn/pom.xml
+++ b/knn/pom.xml
@@ -11,12 +11,19 @@
 
 	<properties>
 
+		<commons.lang.version>3.7</commons.lang.version>
 		<commons.io.version>2.6</commons.io.version>
 		<lombok.version>1.16.20</lombok.version>
 
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons.lang.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
